--- a/bankingapp/deployments/postgres-pos-deploy.yaml
+++ b/bankingapp/deployments/postgres-pos-deploy.yaml
@@ -27,6 +27,6 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_USER
-              value: "dbuser"
+              value: "postgres"
             - name: POSTGRES_PASSWORD
-              value: "dbuser"
+              value: "postgres"
