--- a/bankingapp/services/banking-app-service.yaml
+++ b/bankingapp/services/banking-app-service.yaml
@@ -6,7 +6,8 @@ metadata:
     name: banking-app-service
     app: banking-app  # same to be grouped with the other pod objects
 spec:
-  type: NodePort
+# type: NodePort locally, but for cloud deployments, use LoadBalancer
+  type: LoadBalancer
   ports:
     - port: 8082  # service port
       targetPort: 8082  # pod port
