--- a/bankingapp/services/pos-app-service.yaml
+++ b/bankingapp/services/pos-app-service.yaml
@@ -6,10 +6,11 @@ metadata:
     name: pos-app-service
     app: banking-app  # same to be grouped with the other pod objects
 spec:
-  type: NodePort
+  # type: NodePort locally, but for cloud deployments, use LoadBalancer
+  type: LoadBalancer
   ports:
-    - port: 80  # service port
-      targetPort: 80  # pod port
+    - port: 8081  # service port
+      targetPort: 8081  # pod port
       nodePort: 30005  # accessible externally
   selector:  # must match the pod's labels
     name: pos-app-pod
