--- a/bankingapp/deployments/banking-app-deployment.yaml
+++ b/bankingapp/deployments/banking-app-deployment.yaml
@@ -27,3 +27,8 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082
+          resources:
+            requests:
+              cpu: "100m"
+            limits:
+              cpu: "500m"
