--- a/bankingapp/deployments/pos-app-deployment.yaml
+++ b/bankingapp/deployments/pos-app-deployment.yaml
@@ -28,3 +28,8 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
+          resources:
+            requests:
+              cpu: "100m"
+            limits:
+              cpu: "500m"            
