--- a/bankingapp/initialize-bankingdb-image/bankingappdb-init-job.yaml
+++ b/bankingapp/initialize-bankingdb-image/bankingappdb-init-job.yaml
@@ -8,7 +8,8 @@ spec:
       containers:
         - name: init-bankingappdb-container
           # image: gcr.io/YOUR_PROJECT/init-db:latest
-          image: init-bankingappdb  # Use the local image built from Dockerfile
+          image: init-bankingappdb:latest  # Use the local image built from Dockerfile
+          imagePullPolicy: IfNotPresent
           env:
             - name: PGPASSWORD
               value: "postgres"  # or your actual DB password
