--- a/bankingapp/deployments/banking-app-deployment.yaml
+++ b/bankingapp/deployments/banking-app-deployment.yaml
@@ -22,8 +22,8 @@ spec:
     spec:
       containers:
         - name: banking-app-container
-          image: bankingapp:2.0.5 # for local testing
-          # image: us-central1-docker.pkg.dev/grounded-pivot-466222-u4/my-docker-repo/bankingapp:2.0.4 # to reference the image in Artifact Registry
+          # image: bankingapp:2.0.5 # for local testing
+          image: us-central1-docker.pkg.dev/grounded-pivot-466222-u4/my-docker-repo/bankingapp:2.0.5 # to reference the image in Artifact Registry
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082
