--- a/bankingapp/initialize-posdb-image/posdb-init-job.yaml
+++ b/bankingapp/initialize-posdb-image/posdb-init-job.yaml
@@ -7,8 +7,8 @@ spec:
     spec:
       containers:
         - name: init-posdb-container
-          # image: gcr.io/YOUR_PROJECT/init-db:latest
-          image: init-posdb:latest  # Use the local image built from Dockerfile
+          image: us-central1-docker.pkg.dev/grounded-pivot-466222-u4/my-docker-repo/init-posdb:latest
+          # image: init-posdb:latest  # Use the local image built from Dockerfilekk
           imagePullPolicy: IfNotPresent
           env:
             - name: PGPASSWORD
